--- a/hk_css_custom_closings.css
+++ b/hk_css_custom_closings.css
@@ -1,8 +1,6 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 :root {
-  /******** root colors - sets defaults for everything else that are overrideable ********/
   --root-black-color: #222;
   --root-white-color: #fff;
   --root-background: var(--root-white-color);
@@ -15,9 +13,8 @@
   --root-error-color: #e55252;
   --root-link-color: #0185a2;
   --root-link-hover-color: #00a298;
+  --root-disabled-color: #aaa;
 
-  /******** root typography ********/
   --root-font-family: 'Inter', sans-serif;
   --root-font-weight: 300;
-  /* --root-title-display: none; // this is if we only wanted page titles to show */
 }
