--- a/hk_css_custom_closings.css
+++ b/hk_css_custom_closings.css
@@ -14,7 +14,9 @@
   --root-link-color: #0185a2;
   --root-link-hover-color: #00a298;
   --root-disabled-color: #aaa;
-
   --root-font-family: 'Inter', sans-serif;
   --root-font-weight: 300;
+}
+.anvil-root {
+  font-family: 'Inter', sans-serif !important;
 }
