--- a/hk_css_custom_closings.css
+++ b/hk_css_custom_closings.css
@@ -1,49 +1,210 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+/* 
+This is an example theme to be used in Anvil.
+You can get 80% of the way there only using the root variables. Any variables that are commented out are supported in Anvil, but not used in this example.
+For more granular control, you can use the anvil-* classes to target specific elements. Some are used here or commented out for reference.
+For a complete list of supported variables and classes, see the white labeling documentation: https://useanvil.com/docs/api/white-labeling/
+ */
 
 :root {
+  /******** root colors - sets defaults for everything else that are overrideable ********/
   --root-black-color: #222;
-  --root-grey-color: #cccccc87;
-  --root-grey-2-color: #c4c4c4;
-  --root-gray-80-color: #394040;
-  --root-gray-100-color: #1c2222;
   --root-white-color: #fff;
-  --root-light-white-color: rgb(235, 236, 236);
-  --root-light-black-color: rgb(35, 43, 43);
   --root-background: var(--root-white-color);
   --root-text-color: var(--root-black-color);
-  --root-brand-color: var(--root-black-color);
-  --root-brand-color-20: var(--root-gray-80-color);
-  --root-brand-color-10: var(--root-gray-100-color);
+  --root-brand-color: #6002ee;
+  --root-brand-color-10: #b794f6;
+  --root-brand-color-20: #efe5fd;
+  --root-green-color: #2ed27c;
+  --root-green-color-10: rgba(46, 210, 124, 0.4);
   --root-error-color: #e55252;
   --root-link-color: #0185a2;
   --root-link-hover-color: #00a298;
-  --root-font-family: "Inter", sans-serif;
-  --root-font-weight: 400;
 
-  --webform-background: white;
-  --esign-background: white;
+  /******** root typography ********/
+  --root-font-family: "Roboto", sans-serif;
+  --root-font-weight: 300;
+  /* --root-title-display: none; */
+
+  /******** backgrounds ********/
+  /* --webform-background: <color-value>; */
+  /* --esign-background: <color-value>; */
+
+  /******** webform titles ********/
+  --webform-title-font-weight: 500;
+  --webform-title-font-style: normal;
+  --webform-title-font-size: 32px;
+  --webform-page-title-font-weight: 300;
+  --webform-page-title-font-style: normal;
+  --webform-page-title-font-size: 28px;
+
+  /* --webform-title-color: <color-value>; */
+  /* --webform-page-title-underline-color: <color value>; */
+  /* --webform-page-title-underline-display: none; */
+  /* --webform-page-title-color: <color-value>; */
+
+  /******** button ********/
+  --button-border-radius: 8px;
+  --button-disabled-background: #f5f5f5;
+  --button-disabled-color: #d9d9d9;
+
+  /* --button-disabled-icon-color: <color-value>; */
+  /* --button-background: <color value>; */
+  /* --button-color: <color-value>; */
+  /* --button-hover-color: <color-value>; */
+  /* --button-hover-background: <color-value>; */
+  /* --button-focus-color: <color-value>; */
+  /* --button-focus-background: <color-value>; */
+
+  /******** circle icons ********/
+  /* --circle-icon-background: <color-value>; */
+  /* --circle-icon-color: <color-value; */
+  /* --circle-icon-button-background: <color-value>; */
+
+  /******** fields ********/
+  --field-label-font-weight: 300;
+  --field-error-box-shadow: none;
+  --field-error-background: transparent;
+
+  /* --field-error-label-background: transparent; */
+  /* --field-error-text-color: <color-value>; */
+  /* --field-label-color: <color-value>; */
+
+  /******** field inputs ********/
+  --field-input-background-color: transparent;
+  --field-input-border: none;
+  --field-input-border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+  --field-input-focus-box-shadow: none;
+  --field-input-padding-x: 0;
+  /* --field-input-hover-border-color: <color value>; */
+  /* --field-input-focus-border-color: <color value>; *
+  /* padding-y is not supported right now - use selectors to target elements you want for padding top/bottom */
+
+  /******** dropdown ********/
+  --dropdown-menu-font-weight: 300;
+  --dropdown-menu-style: normal;
+  --dropdown-placeholder-font-style: italic;
+  --dropdown-placeholder-font-weight: 400;
+
+  /* --dropdown-option-active-background-color: <color-value>; */
+  /* --dropdown-menu-background-color: <color-value>; */
+  /* --dropdown-menu-color: <color-value>; */
+  /* --dropdown-placeholder-background-color: <color-value>; */
+  /* --dropdown-placeholder-color: <color-value>; */
+  /* --dropdown-placeholder-active-color: <color-value>; */
+
+  /******** date picker ********/
+  --date-picker-border: none;
+  --date-picker-today-border-radius: 0;
+  --date-picker-footer-button-font-style: italic;
+  --date-picker-footer-button-font-weight: 500;
+  --date-picker-days-of-week-font-style: italic;
+  --date-picker-days-of-week-font-weight: 600;
+
+  /* --date-picker-footer-button-color: <color-value>; */
+  /* --date-picker-footer-button-hover-color: <color-value>; */
+  /* --date-picker-background: <color-value>; */
+  /* --date-picker-color: <color-value>; */
+  /* --date-picker-hover-background: <color-value>; */
+  /* --date-picker-today-hover-background: <color-value>; */
+  /* --date-picker-today-hover-color: <color-value>; */
+  /* --date-picker-controls-color: <color-value>; */
+  /* --date-picker-controls-hover-color: <color-value>; */
+
+  /******** dropzone ********/
+  /* --dropzone-border: 2px dashed <color-value>; */
+  /* --dropzone-active-border: 2px dashed <color-value>; */
+  /* --dropzone-accept-border: 2px dashed <color-value>; */
+  /* --dropzone-accept-background: <color-value>; */
+  /* --dropzone-reject-border: 2px dashed <color-value>; */
+  /* --dropzone-error-text-color: <color-value>; */
+
+  /******** dropzone supported selectors ********/
+  /* there are more, but these are only on certain drag and drop states */
+  /* they are here for easier reference. you can target anything within the dropzone for these states using these classes */
+  /* - `.anvil-dropzone-drop-active` */
+  /* - `.anvil-dropzone-drop-accept` */
+  /* - `.anvil-dropzone-drop-reject` */
+  /* - `.anvil-dropzone-drop-disabled` */
+
+  /******** loading spinner ********/
+  /* --loading-spinner-color: <color-value>; */
+  --loading-spinner-size: 24px;
+  --loading-spinner-thickness: 2px;
+
+  /******** checkboxes ********/
+  /* --checkbox-checked-background: <color-value>; */
+  /* --checkbox-checked-border-color: <color-value>; */
+  /* --checkbox-check-hover-border-color: <color-value>; */
+
+  /* --checkbox-checked-border: 1px solid var(--root-primary-color); */
+  /* --checkbox-border-radius: 50%; */
+
+  /******** radio buttons ********/
+  /* --radio-buttons-selected-background: <color-value>; */
+  /* --radio-buttons-selected-color: <color-value>; */
+  /* --radio-buttons-unselected-background-color: <color-value>; */
+  /* --radio-buttons-unselected-color: <color-value>; */
+
+  /******** content card ********/
+  --content-card-background: transparent;
+  --content-card-box-shadow: none;
+  --content-card-padding: 0;
+  --content-card-margin-bottom: 40px;
+  --content-title-font-size: 20px;
+  --content-title-font-weight: 500;
+
+  /*************************************/
+  /******** webform review page ********/
+  /*************************************/
+
+  /******** review data card ********/
+  --review-data-card-empty-value-required-border-left: none;
+  --review-data-card-empty-value-required-border-bottom: 2px solid
+    var(--root-error-color);
+  --review-data-card-empty-value-font-style: italic;
+
+  /* --review-data-card-value-empty-required-hover-color: <color-value>; */
+  /* --review-data-card-value-label-color: <color-value>; */
+  /* --review-data-card-value-label-hover-color: <color-value>; */
+  /* --review-data-card-item-edit-link-color: <color-value>; */
+  /* --review-data-card-empty-value-required-border-color: <color-value>; */
+  /* --review-data-card-edit-button-color: <color-value>; */
+  /* --review-data-card-edit-button-hover-color: <color-value>; */
 }
 
-/* Apply Inter to all major elements */
-body, input, select, textarea, button {
-  font-family: 'Inter', sans-serif !important;
+.anvil-markdown strong {
+  font-weight: 500;
+  font-style: normal;
 }
 
-/* Force form sections to white background with red border */
-.forge-page.anvil-webform-page > * {
-  background-color: #fff !important;
-  border: 1px solid #e55252 !important;
-  border-radius: 4px;
-  padding: 32px;
+.anvil-markdown ul {
+  list-style-type: square;
 }
 
-/* Checkbox customization */
-.ant-checkbox-inner {
-  border: 1px solid #e55252 !important;
-  background-color: #fff !important;
+.anvil-markdown ol {
+  list-style-type: decimal;
 }
 
-.ant-checkbox-checked .ant-checkbox-inner:after {
-  border-color: #e55252 !important;
+.anvil-field-content-container {
+  display: flex;
+  flex-direction: column;
+}
+
+/* we use ant-form-item-has-error to target only error fields. will change to anvil-field-has-error in the future */
+.ant-form-item-has-error
+  .anvil-field-content-container
+  .anvil-field-help-label {
+  order: 2;
+  position: relative;
+  margin-top: 6px;
+  text-align: left;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.anvil-list-input-item .anvil-field-label {
+  font-size: 14px;
+  font-style: italic;
 }
