--- a/hk_css_custom_closings.css
+++ b/hk_css_custom_closings.css
@@ -5,6 +5,7 @@ This is an example theme to be used in Anvil.
 You can get 80% of the way there only using the root variables. Any variables that are commented out are supported in Anvil, but not used in this example.
 For more granular control, you can use the anvil-* classes to target specific elements. Some are used here or commented out for reference.
 For a complete list of supported variables and classes, see the white labeling documentation: https://useanvil.com/docs/api/white-labeling/
+Test
  */
 
 :root {
