--- a/hk_css_custom_closings.css
+++ b/hk_css_custom_closings.css
@@ -13,7 +13,7 @@ For a complete list of supported variables and classes, see the white labeling d
   --root-white-color: #fff;
   --root-background: var(--root-white-color);
   --root-text-color: var(--root-black-color);
-  --root-brand-color: #6002ee;
+  --root-brand-color: red;
   --root-brand-color-10: #b794f6;
   --root-brand-color-20: #efe5fd;
   --root-green-color: #2ed27c;
@@ -24,7 +24,7 @@ For a complete list of supported variables and classes, see the white labeling d
 
   /******** root typography ********/
   --root-font-family: "Roboto", sans-serif;
-  --root-font-weight: 600;
+  --root-font-weight: 300;
   /* --root-title-display: none; */
 
   /******** backgrounds ********/
