--- a/hk_css_custom_closings.css
+++ b/hk_css_custom_closings.css
@@ -50,7 +50,7 @@ For a complete list of supported variables and classes, see the white labeling d
   --button-color: #EBECEC; /* Harshad_kulkarni_Carta primary button color */
   --button-disabled-background: #DEDFDF; /* Harshad_kulkarni_Carta button-disabled-background color */
   --button-disabled-color: #A7AAAA;
-  --button-hover-color: #394040;
+  --button-hover-color: #EBECEC;
   --button-hover-background: #394040;
   --button-focus-color: #8BABD6;
   /* --button-disabled-icon-color: <color-value>; */
